Java version rollback